# Multithreaded_Web_Server

./: CMakeLists.txt  README.md  test.sh
public/css/: style.css
public/js/: script.js
src/core/: Server.cpp  Server.h  main.cpp
src/handlers/: FileHandler.cpp  FileHandler.h  ResponseGenerator.cpp
src/http/: HttpParser.h  HttpRequest.cpp  HttpRequest.h
src/public/: index.html
